hphp/test/zend/good/Zend/tests/errmsg_038.php.expectf
Fatal error: Properties cannot be declared final in %s/errmsg_038.php on line 4
